--- a/web/index.html
+++ b/web/index.html
@@ -29,6 +29,9 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
+  <!-- Google Sign In -->
+  <meta name="google-signin-client_id" content="1007138815568-v45vciqj9cd8b2tj5emcsqfol32afblb.apps.googleusercontent.com" />
+
   <title>client</title>
   <link rel="manifest" href="manifest.json">
 </head>
